refactor(racing): CarDTO의 Comparator를 Game에서 관리하고, 우승자를 선정할 때 주입하도록 변경
- CarDTO의 Comparator를 Game에서 관리하고, 우승자를 선정할 때 주입하도록 변경
- CarDtoDistanceComparator가 Comparator<CarDTO>를 구현하도록 제너릭 명시